2021-05-31  6.9.12-14  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.12-14 GIT revision 16665:c75ae771a:20210531

2021-05-17  6.9.12-13  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.12-13 GIT revision 16653:8305ee312:20210517

2021-05-12  6.9.12-13  Dirk Lemstra <dirk@lem.....org>
  * Fixed reading and writing the XMP chunk in a WebP image (reference
    https://github.com/ImageMagick/ImageMagick/discussions/3617).

2021-05-11  6.9.12-13  <quetzlzacatenango@image...>
  * label and caption sanity check is too conservative.

2021-05-07  6.9.12-12  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.12-12 GIT revision 16630:ed78be2e6:20210507

2021-05-06  6.9.12-12  <quetzlzacatenango@image...>
  * -layers optimize no longer produces broken output (reference
    https://github.com/ImageMagick/ImageMagick/issues/3520).

2021-05-04  6.9.12-11  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.12-11 GIT revision 16625:7d8a3b762:20210504

2021-04-25  6.9.12-11  <quetzlzacatenango@image...>
  * reverted color reduction patch so that it treats alpha blending properly.

2021-04-28  6.9.12-10  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.12-10 GIT revision 16602:f98edd4aa:20210428

2021-04-25  6.9.12-10  <quetzlzacatenango@image...>
  * Check image is not NULL before dereferencing.

2021-04-25  6.9.12-9  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.12-9 GIT revision 16...

2021-04-25  6.9.12-9  <quetzlzacatenango@image...>
  * eliminate uninitialized value.
  * Differences in computing linear gray (reference
    https://github.com/ImageMagick/ImageMagick/issues/3571).

2021-04-17  6.9.12-8  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.12-8 GIT revision 16581:0eccd3556:20210417

2021-04-09  6.9.12-8  <quetzlzacatenango@image...>
  * constrain sub-image list.
  * write tiff colormapped images with an alpha channel as PHOTOMETRIC_RGB
