@@ -1,3 +1,7 @@
+2021-06-02  6.9.12-15  <quetzlzacatenango@image...>
+  * Raise exception for invalid compose:args geometry (reference
+    https://github.com/ImageMagick/ImageMagick/issues/3765).
+
 2021-05-31  6.9.12-14  <quetzlzacatenango@image...>
   * Release ImageMagick version 6.9.12-14 GIT revision 16665:c75ae771a:20210531
 
